correction visuelle version mobile

--- a/src/styles/pages/contact.css
+++ b/src/styles/pages/contact.css
@@ -352,7 +352,7 @@ textarea:focus {
   }
 
   .typewriter-container {
-    min-height: 280px;
+    min-height: 380px;
     min-width: 100%;
     padding: 0.8rem;
   }
